// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyListView renders with custom renderRow 1`] = `
<RCTScrollView
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  emptyText="Nothing. Nothing at all."
  enableEmptySections={true}
  immutableData={
    Immutable.List [
      1,
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderEmpty="No data."
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      "Overridden!"
    </Text>
  </View>
</RCTScrollView>
`;

exports[`EmptyListView renders with custom text 1`] = `
<RCTScrollView
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  emptyText="Nothing. Nothing at all."
  enableEmptySections={true}
  immutableData={
    Immutable.List [
      1,
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderEmpty="No data."
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "padding": 8,
          "textAlign": "center",
        }
      }
    >
      Nothing. Nothing at all.
    </Text>
  </View>
</RCTScrollView>
`;

exports[`EmptyListView renders with default text 1`] = `
<RCTScrollView
  dataSource={
    ListViewDataSource {
      "items": 1,
    }
  }
  emptyText="No data."
  enableEmptySections={true}
  immutableData={
    Immutable.List [
      1,
    ]
  }
  initialListSize={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={1000}
  onKeyboardDidHide={undefined}
  onKeyboardDidShow={undefined}
  onKeyboardWillHide={undefined}
  onKeyboardWillShow={undefined}
  onLayout={[Function]}
  onScroll={[Function]}
  pageSize={1}
  removeClippedSubviews={false}
  renderEmpty="No data."
  renderRow={[Function]}
  scrollEventThrottle={50}
  scrollRenderAheadDistance={1000}
  sectionHeaderHasChanged={[Function]}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "padding": 8,
          "textAlign": "center",
        }
      }
    >
      No data.
    </Text>
  </View>
</RCTScrollView>
`;
